(chore): catalog resources via artifact generator
updates catalog API (Breaking change)


(chore): register artifact generator scheme


(chore): removes kustomize WithPath option


(chore): adds involved object creation files


(chore): updates catalog controller

removes secret watch and secret managed label
adds custom predicate to ignore reconciliation if status hasn't changed
sets conditions for involved objects


(chore): updates env tests


(chore): updates e2e tests


(chore): updates local env flux setup

installs source-watcher for artifact generator extension
adds feature gates to enable ExternalArtifact on kustomize controller


(chore): adds helper func


(chore): adds ignore status update predicate

generic ignore status predicate for flux and greenhouse objects


(chore): array of sources in catalog spec


(chore): generate manifests


(chore): adds label keys for catalog


(chore): adds source generator for Catalog


(chore): update controller to handle multiple sources

create multiple internal catalog resources to resolve greenhouse objects from Git repo

handles deletion of orphaned internal catalog resources


(chore): updates tests


(chore): tidy up


(chore): update sample with multi-source


Automatic generation of CRD API Docs

(chore): remove scoped test


(chore): use hash/fnv instead of crypto/md5


Automatic generation of CRD API Docs

(chore): fix lint err


(chore): use strconv FormatUint instead of fmt.Sprintf


(chore): return on err


(chore): update test


(chore): err checks in unit tests


(chore): use net/url


(chore): apply code suggestions from review


(chore): add api docs


(chore): remove common labels


(chore): remove TODO


(chore): regenerate manifests
