# api/v1alpha1/catalog_types.go
@@ -4,6 +4,9 @@
 package v1alpha1
 
 import (
+	"slices"
+
+	sourcev1 "github.com/fluxcd/source-controller/api/v1"
 	metav1 "k8s.io/apimachinery/pkg/apis/meta/v1"
 
 	greenhousemetav1alpha1 "github.com/cloudoperators/greenhouse/api/meta/v1alpha1"
@@ -16,43 +19,29 @@ const (
 
 // CatalogSpec defines the desired state of Catalog.
 type CatalogSpec struct {
-	// Source is the medium from which the PluginDefinition needs to be fetched
-	Source CatalogSource `json:"source"`
-	// Overrides are the PluginDefinition overrides to be applied
-	// +Optional
-	Overrides []CatalogOverrides `json:"overrides,omitempty"`
+	// Sources contains the list of Git Repository source to resolve PluginDefinitions / ClusterPluginDefinitions from
+	Sources []CatalogSource `json:"sources"`
 }
 
 type CatalogSource struct {
-	// Git is the Git repository source for the PluginDefinition Catalog
-	Git GitSource `json:"git"`
-	// Path is the path within the repository where the ClusterPluginDefinition / PluginDefinition Catalog is located
-	// an empty path indicates the root of the repository
+	// Repository - the Git repository URL
+	Repository string `json:"repository"`
+
+	// Resources contains the list of path to PluginDefinition files
+	// e.g. ["plugins/plugin-a.yaml", "plugins/plugin-b.yaml"]
+	// glob patterns are supported, e.g. ["plugins/*.yaml", "more-plugins/**/plugindefinition.yaml"]
+	Resources []string `json:"resources"`
+
+	// Excludes contains a list of path patterns to exclude from the Catalog
+	// e.g. ["**/test/**", "**/example*/**"]
 	// +Optional
-	Path string `json:"path,omitempty"`
-}
+	Excludes []string `json:"excludes,omitempty"`
 
-type CatalogOverrides struct {
-	// Name is the name of the PluginDefinition to patch with an alias
-	Name string `json:"name"`
-	// Alias is the alias to apply to the PluginDefinition Name via Kustomize patches
-	// For SourceType Helm, this field is passed to postRender Kustomize patch
-	Alias string `json:"alias"`
-	// Repository is the repository to override in the PluginDefinition .spec.helmChart.repository
-	// +Optional
-	Repository string `json:"repository,omitempty"`
-
-	// TODO: implement Options in Overrides for further values patching in PluginDefinition || ClusterPluginDefinition
-}
-
-type GitSource struct {
-	// Repository is the URL of the GitHub repository containing the ClusterPluginDefinition / PluginDefinition Catalog
-	URL string `json:"url"`
-
-	// Ref is the Git reference (branch, tag, or SHA) to resolve the ClusterPluginDefinition / PluginDefinition Catalog
+	// Ref is the git reference (branch, tag, or SHA) to resolve PluginDefinitions from
+	// precedence: SHA > Tag > Branch
+	// if not specified, defaults to the branch "main"
 	// +Optional
 	Ref *GitRef `json:"ref,omitempty"`
-
 	// SecretName is the name of v1.Secret containing credentials to access the Git repository
 	// the secret must be in the same namespace as the Catalog resource
 	/*
@@ -78,6 +67,21 @@ type GitSource struct {
 	*/
 	// +Optional
 	SecretName *string `json:"secretName,omitempty"`
+
+	// Overrides are the PluginDefinition overrides to be applied
+	// +Optional
+	Overrides []CatalogOverrides `json:"overrides,omitempty"`
+}
+
+type CatalogOverrides struct {
+	// Name is the name of the PluginDefinition to patch with an alias
+	Name string `json:"name"`
+	// Alias is the alias to apply to the PluginDefinition Name via Kustomize patches
+	// For SourceType Helm, this field is passed to postRender Kustomize patch
+	Alias string `json:"alias"`
+	// Repository is the repository to override in the PluginDefinition .spec.helmChart.repository
+	// +Optional
+	Repository string `json:"repository,omitempty"`
 }
 
 type GitRef struct {
@@ -86,11 +90,20 @@ type GitRef struct {
 	SHA    *string `json:"sha,omitempty"`
 }
 
+type SourceStatus struct {
+	Kind   string `json:"kind"`
+	Name   string `json:"name"`
+	ErrMsg string `json:"errMsg,omitempty"`
+}
+
 // CatalogStatus defines the observed state of Catalog.
 type CatalogStatus struct {
 	// StatusConditions contain the different conditions that constitute the status of the Catalog
 	// +Optional
 	greenhousemetav1alpha1.StatusConditions `json:"statusConditions,omitempty"`
+	// Inventory contains list of internal artifacts generated by Catalog
+	// +Optional
+	Inventory map[string][]SourceStatus `json:"inventory,omitempty"`
 }
 
 // +kubebuilder:object:root=true
@@ -116,12 +129,58 @@ type CatalogList struct {
 	Items           []Catalog `json:"items"`
 }
 
-func (c *Catalog) ResourcePath() string {
-	return c.Spec.Source.Path
+func (c *Catalog) SetInventory(hash, kind, name, errMsg string) {
+	if c.Status.Inventory == nil {
+		c.Status.Inventory = make(map[string][]SourceStatus)
+	}
+	if _, ok := c.Status.Inventory[hash]; !ok {
+		c.Status.Inventory[hash] = make([]SourceStatus, 0, 4)
+	}
+	idx := slices.IndexFunc(c.Status.Inventory[hash], func(in SourceStatus) bool {
+		return in.Kind == kind && in.Name == name
+	})
+	if idx == -1 {
+		c.Status.Inventory[hash] = append(c.Status.Inventory[hash], SourceStatus{Kind: kind, Name: name, ErrMsg: errMsg})
+		return
+	}
+	c.Status.Inventory[hash][idx].ErrMsg = errMsg
 }
 
-func (c *Catalog) GetCatalogSource() GitSource {
-	return c.Spec.Source.Git
+func (s *CatalogSource) GetRefValue() (gitRef string) {
+	if s.Ref == nil {
+		gitRef = "main"
+		return
+	}
+	switch {
+	case s.Ref.SHA != nil:
+		gitRef = *s.Ref.SHA
+	case s.Ref.Tag != nil:
+		gitRef = *s.Ref.Tag
+	case s.Ref.Branch != nil:
+		gitRef = *s.Ref.Branch
+	default:
+		gitRef = "main"
+	}
+	return
+}
+
+func (s *CatalogSource) GetGitRepositoryReference() *sourcev1.GitRepositoryRef {
+	gitReference := &sourcev1.GitRepositoryRef{}
+	if s.Ref != nil {
+		// flux precedence 1
+		if s.Ref.SHA != nil {
+			gitReference.Commit = *s.Ref.SHA
+		}
+		// flux precedence 2
+		if s.Ref.Tag != nil {
+			gitReference.Tag = *s.Ref.Tag
+		}
+		// flux precedence 3
+		if s.Ref.Branch != nil {
+			gitReference.Branch = *s.Ref.Branch
+		}
+	}
+	return gitReference
 }
 
 func (c *Catalog) GetConditions() greenhousemetav1alpha1.StatusConditions {
@@ -130,6 +189,23 @@ func (c *Catalog) GetConditions() greenhousemetav1alpha1.StatusConditions {
 
 func (c *Catalog) SetCondition(condition greenhousemetav1alpha1.Condition) {
 	c.Status.SetConditions(condition)
+}
+
+// SetUnknownCondition - sets ready conditions to Unknown if not already set.
+func (c *Catalog) SetUnknownCondition() {
+	if cond := c.Status.GetConditionByType(greenhousemetav1alpha1.ReadyCondition); cond == nil {
+		c.SetCondition(
+			greenhousemetav1alpha1.UnknownCondition(greenhousemetav1alpha1.ReadyCondition, CatalogNotReadyReason, "Catalog reconciliation in progress"),
+		)
+	}
+}
+
+func (c *Catalog) SetFalseCondition(conditionType greenhousemetav1alpha1.ConditionType, reason greenhousemetav1alpha1.ConditionReason, message string) {
+	c.SetCondition(greenhousemetav1alpha1.FalseCondition(conditionType, reason, message))
+}
+
+func (c *Catalog) SetTrueCondition(conditionType greenhousemetav1alpha1.ConditionType, reason greenhousemetav1alpha1.ConditionReason, message string) {
+	c.SetCondition(greenhousemetav1alpha1.TrueCondition(conditionType, reason, message))
 }
 
 func init() {
