# docs/reference/api/openapi.yaml
@@ -33,69 +33,94 @@ components:
         spec:
           description: CatalogSpec defines the desired state of Catalog.
           properties:
-            overrides:
-              description: Overrides are the PluginDefinition overrides to be applied
+            sources:
               items:
                 properties:
-                  alias:
+                  excludes:
                     description: |-
-                      Alias is the alias to apply to the PluginDefinition Name via Kustomize patches
-                      For SourceType Helm, this field is passed to postRender Kustomize patch
-                    type: string
-                  name:
-                    description: Name is the name of the PluginDefinition to patch with an alias
-                    type: string
+                      Excludes - list of path patterns to exclude from the Catalog
+                      e.g. ["**/test/**", "**/example*/**"]
+                    items:
+                      type: string
+                    type: array
+                  overrides:
+                    description: Overrides are the PluginDefinition overrides to be applied
+                    items:
+                      properties:
+                        alias:
+                          description: |-
+                            Alias is the alias to apply to the PluginDefinition Name via Kustomize patches
+                            For SourceType Helm, this field is passed to postRender Kustomize patch
+                          type: string
+                        name:
+                          description: Name is the name of the PluginDefinition to patch with an alias
+                          type: string
+                        repository:
+                          description: Repository is the repository to override in the PluginDefinition .spec.helmChart.repository
+                          type: string
+                      required:
+                        - alias
+                        - name
+                      type: object
+                    type: array
+                  ref:
+                    description: |-
+                      Ref - the git reference (branch, tag, or SHA) to resolve PluginDefinitions
+                      if not specified, defaults to main branch
+                    properties:
+                      branch:
+                        type: string
+                      sha:
+                        type: string
+                      tag:
+                        type: string
+                    type: object
                   repository:
-                    description: Repository is the repository to override in the PluginDefinition .spec.helmChart.repository
+                    description: Repository - the Git repository URL
+                    type: string
+                  resources:
+                    description: |-
+                      Resources - list of path to PluginDefinition file
+                      e.g. ["plugins/plugin-a.yaml", "plugins/plugin-b.yaml"]
+                      glob patterns are supported, e.g. ["plugins/*.yaml", "more-plugins/**/plugindefinition.yaml"]
+                    items:
+                      type: string
+                    type: array
+                  secretName:
+                    description: |-
+                      SecretName is the name of v1.Secret containing credentials to access the Git repository
+                      the secret must be in the same namespace as the Catalog resource
+      
+                      GitHub App Example:
                     type: string
                 required:
-                  - alias
-                  - name
+                  - repository
+                  - resources
                 type: object
               type: array
-            source:
-              description: Source is the medium from which the PluginDefinition needs to be fetched
-              properties:
-                git:
-                  description: Git is the Git repository source for the PluginDefinition Catalog
-                  properties:
-                    ref:
-                      description: Ref is the Git reference (branch, tag, or SHA) to resolve the ClusterPluginDefinition / PluginDefinition Catalog
-                      properties:
-                        branch:
-                          type: string
-                        sha:
-                          type: string
-                        tag:
-                          type: string
-                      type: object
-                    secretName:
-                      description: |-
-                        SecretName is the name of v1.Secret containing credentials to access the Git repository
-                        the secret must be in the same namespace as the Catalog resource
-      
-                        GitHub App Example:
-                      type: string
-                    url:
-                      description: Repository is the URL of the GitHub repository containing the ClusterPluginDefinition / PluginDefinition Catalog
-                      type: string
-                  required:
-                    - url
-                  type: object
-                path:
-                  description: |-
-                    Path is the path within the repository where the ClusterPluginDefinition / PluginDefinition Catalog is located
-                    an empty path indicates the root of the repository
-                  type: string
-              required:
-                - git
-              type: object
           required:
-            - source
+            - sources
           type: object
         status:
           description: CatalogStatus defines the observed state of Catalog.
           properties:
+            inventory:
+              additionalProperties:
+                items:
+                  properties:
+                    errMsg:
+                      type: string
+                    kind:
+                      type: string
+                    name:
+                      type: string
+                  required:
+                    - kind
+                    - name
+                  type: object
+                type: array
+              description: Inventory contains list of internal artifacts generated by Catalog
+              type: object
             statusConditions:
               description: StatusConditions contain the different conditions that constitute the status of the Catalog
               properties:
